make FOSS awesome!

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Foundation</h2>
+                    <h3 class="section-subheading text-muted">Free and Open-Source Software - in short FOSS - propells the digital progress world wide. Everyone uses it - knowingly or unknowingly. We believe that FOSS brings unique opportunities to Wales. Here are some of the values we stand for:</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -13,25 +13,58 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Education</h4>
+                    <p class="text-muted">Open-Source software is free to study, to adapt and to make your own. And if you want to learn, you an join thousands of collectives and communities around the world who use free software to teach and learn.</p>
                 </div>
+
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Access and Diversity</h4>
+                    <p class="text-muted">The solutions of tomorrow are formed by vivid communities of all ages, gernders, ethnicities, religions, ... We believe that opening up our hearts and source code to the world brings unforseen opportinuties for users, developers though a co-creative process.</p>
                 </div>
+
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Security</h4>
+                    <p class="text-muted">Open-source software secures most web infrastructure world wide and in Wales. A souvereign Wales needs the security of audited, well-informed and openly available processes to secure all infrastructure. FOSS makes it possible to escape the doctrine of secrecy to secure digital infrastructure for the people by the people.</p>
                 </div>
+
+            </div>
+            <div class="row text-center">
+
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Social Change</h4>
+                    <p class="text-muted">Social change starts with responsibility and democracy. Big Tech like Facebook profits from hate and fear, a loving and trusting relationship in one-enother is endangered and with it  democracy at its root. FOSS services like PeerTube, Mastodon, Discourse are spaces of souvereign discussion..</p>
+                </div>
+
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Sustainability</h4>
+                    <p class="text-muted">Old hardware is a resource in the hands of FOSS enthusiasts. While Apple and Google waste devices though planned obsolesence, open-source communities around the world patch, replace and build the long-lasting alternative. If there is no incentive to waste to make people buy again, it is not built in.</p>
+                </div>
+
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Business</h4>
+                    <p class="text-muted">FOSS is at the heart of business world wide. A range of business models build with and on top of free software. The creative power of a world wide sharing of solutions is unbeaten in the Internet of Things, the Edge Cloud, Industry 4.0 and Blockchain.</p>
+                </div>
+
             </div>
         </div>
     </section>
