work on more sections

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -23,7 +23,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Access and Diversity</h4>
-                    <p class="text-muted">The solutions of tomorrow are formed by vivid communities of all ages, gernders, ethnicities, religions, ... We believe that opening up our hearts and source code to the world brings unforseen opportinuties for users, developers though a co-creative process.</p>
+                    <p class="text-muted">The solutions of tomorrow are formed by vivid communities of all ages, gernders, ethnicities, religions, ... We believe that opening up our hearts and source code to the world brings unforseen opportinuties for users and developers alike though a co-creative process.</p>
                 </div>
 
                 <div class="col-md-4">
@@ -44,7 +44,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Social Change</h4>
-                    <p class="text-muted">Social change starts with responsibility and democracy. Big Tech like Facebook profits from hate and fear, a loving and trusting relationship in one-enother is endangered and with it  democracy at its root. FOSS services like PeerTube, Mastodon, Discourse are spaces of souvereign discussion..</p>
+                    <p class="text-muted">Social change starts with responsibility and democracy. Big Tech like Facebook profits from hate and fear, a loving and trusting relationship in one-enother is endangered and with it  democracy at its root. FOSS services like PeerTube, Mastodon, Discourse are spaces of souvereign discussions.</p>
                 </div>
 
                 <div class="col-md-4">
