work on projects

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Education</h4>
                     <p class="text-muted">Open-Source software is free to study, to adapt and to make your own. And if you want to learn, you an join thousands of collectives and communities around the world who use free software to teach and learn.</p>
@@ -59,7 +59,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Business</h4>
                     <p class="text-muted">FOSS is at the heart of business world wide. A range of business models build with and on top of free software. The creative power of a world wide sharing of solutions is unbeaten in the Internet of Things, the Edge Cloud, Industry 4.0 and Blockchain.</p>
