--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,4 +1,5 @@
 <!-- Services Section -->
+<!-- These icons use font awesome. -->
     <section id="services">
         <div class="container">
             <div class="row">
@@ -20,7 +21,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-wheelchair fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Access and Diversity</h4>
                     <p class="text-muted">The solutions of tomorrow are formed by vivid communities of all ages, gernders, ethnicities, religions, ... We believe that opening up our hearts and source code to the world brings unforseen opportinuties for users and developers alike though a co-creative process.</p>
@@ -41,7 +42,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-user fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Social Change</h4>
                     <p class="text-muted">Social change starts with responsibility and democracy. Big Tech like Facebook profits from hate and fear, a loving and trusting relationship in one-enother is endangered and with it  democracy at its root. FOSS services like PeerTube, Mastodon, Discourse are spaces of souvereign discussions.</p>
@@ -50,7 +51,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Sustainability</h4>
                     <p class="text-muted">Old hardware is a resource in the hands of FOSS enthusiasts. While Apple and Google waste devices though planned obsolesence, open-source communities around the world patch, replace and build the long-lasting alternative. If there is no incentive to waste to make people buy again, it is not built in.</p>
