--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
     {% include portfolio_grid.html %}
     {% include about.html %}
     {% include team.html %}
-    {% include clients.html %}
+<!-- We can include the clients, once we have people who endorse us. -->
+<!-- { % include clients.html % } -->
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
