--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,8 @@
                         </li>
                         <li><a href="#">Terms of Use</a>
                         </li>
+                        <li>Header photo by <a href="https://unsplash.com/@tezos?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tezos</a> from <a href="https://unsplash.com/s/photos/open-source?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                        </li>
                     </ul>
                 </div>
             </div>
