--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,16 @@
 
     {% include header.html %}
     {% include services.html %}
+{% comment %}
     {% include portfolio_grid.html %}
     {% include about.html %}
     {% include team.html %}
+{% endcomment %}
 <!-- We can include the clients, once we have people who endorse us. -->
 <!-- { % include clients.html % } -->
+{% comment %}
     {% include contact.html %}
+{% endcomment %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
