--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,6 +1,6 @@
 <!-- Services Section -->
 <!-- These icons use font awesome. -->
-    <section id="services">
+    <section id="foundation">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
