--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,40 +3,19 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">At the moment, you can contact us via mail to hello<span>-websit</span>e@f<span>oss.w</span>ales or on GitHub.</h3>
+                    <h3 class="section-subheading text-muted">
+                        We have our discussions on the Matrix chat at:
+                        <pre>#foss-wales:matrix.org</pre>
+                        To join the chat, you can use among others the app
+                        <a href="https://app.element.io/#/room/#foss-wales:matrix.org">element.io</a>.
+                    </h3>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="This form does not work, yet." id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
+                <div class="col-lg-12 text-center">
+                    <h3 class="section-subheading text-muted">
+                        For your convenience, you can reach someone via email to
+                        hello<span>-websit</span>e@f<span>oss.w</span>ales or on
+                        <a href="http://github.com/foss-wales">GitHub</a>.
+                    </h3>
                 </div>
             </div>
         </div>
